@@ -147,6 +147,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+      <version>${pathling.springBootVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
       <version>${pathling.springBootVersion}</version>
       <exclusions>
@@ -397,6 +402,28 @@
           <plugin>
             <groupId>com.google.cloud.tools</groupId>
             <artifactId>jib-maven-plugin</artifactId>
+            <configuration>
+              <from>
+                <image>${pathling.dockerBaseImage}</image>
+                <platforms>
+                  <platform>
+                    <architecture>amd64</architecture>
+                    <os>linux</os>
+                  </platform>
+                  <platform>
+                    <architecture>arm64</architecture>
+                    <os>linux</os>
+                  </platform>
+                </platforms>
+              </from>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
+                </jvmFlags>
+              </container>
+            </configuration>
             <executions>
               <execution>
                 <id>build</id>
@@ -412,19 +439,6 @@
                   <goal>build</goal>
                 </goals>
                 <configuration>
-                  <from>
-                    <image>${pathling.dockerBaseImage}</image>
-                    <platforms>
-                      <platform>
-                        <architecture>amd64</architecture>
-                        <os>linux</os>
-                      </platform>
-                      <platform>
-                        <architecture>arm64</architecture>
-                        <os>linux</os>
-                      </platform>
-                    </platforms>
-                  </from>
                   <to>
                     <image>${pathling.fhirServerDockerRepo}</image>
                     <tags>
@@ -447,6 +461,29 @@
           <plugin>
             <groupId>com.google.cloud.tools</groupId>
             <artifactId>jib-maven-plugin</artifactId>
+            <configuration>
+              <from>
+                <image>${pathling.dockerBaseImage}</image>
+                <platforms>
+                  <platform>
+                    <architecture>amd64</architecture>
+                    <os>linux</os>
+                  </platform>
+                  <platform>
+                    <architecture>arm64</architecture>
+                    <os>linux</os>
+                  </platform>
+                </platforms>
+              </from>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
+                </jvmFlags>
+              </container>
+              <allowInsecureRegistries>true</allowInsecureRegistries>
+            </configuration>
             <executions>
               <execution>
                 <id>deploy</id>
@@ -455,19 +492,6 @@
                   <goal>build</goal>
                 </goals>
                 <configuration>
-                  <from>
-                    <image>${pathling.dockerBaseImage}</image>
-                    <platforms>
-                      <platform>
-                        <architecture>amd64</architecture>
-                        <os>linux</os>
-                      </platform>
-                      <platform>
-                        <architecture>arm64</architecture>
-                        <os>linux</os>
-                      </platform>
-                    </platforms>
-                  </from>
                   <to combine.self="override">
                     <image>${pathling.fhirServerDockerRepo}:${pathling.fhirServerDockerTag}-develop</image>
                   </to>
